--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,14 @@
 .App {
   text-align: center;
+  max-width: 100vw;
+  margin-right: 0 auto;
 }
 
-.App-header {
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.table {
+  margin: 0 auto;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+td {
+  width: calc(100% / 3);
 }
