--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,59 @@
 .App {
   text-align: center;
-  max-width: 100vw;
   margin-right: 0 auto;
+}
+
+.App-header {
+  height: 60px;
+  margin-bottom: 32px;
+}
+
+h1 {
+  margin: 0;
 }
 
 .table {
   margin: 0 auto;
-  width: 100%;
+  width: 80%;
+}
+
+tr {
+  margin-bottom: 20px;
 }
 
 td {
-  width: calc(100% / 3);
+  width: calc(100% / 4);
+}
+
+.name {
+  width: 50%;
+}
+
+.wrapper {
+  display: flex;
+}
+
+.tableWrapper {
+  width: 100%;
+  height: calc(100vh - 100px);
+  overflow-y: scroll;
+}
+
+.panel {
+  padding-left: 32px;
+  padding-right: 32px;
+  width: 450px;
+}
+
+.label {
+  display: block;
+  font-size: 32px;
+  margin-bottom: 32px;
+}
+
+.input {
+  width: 50%;
+  height: 32px;
+  font-size: 32px;
+  text-align: center;
 }
